Fix flex issue with input-search__input on FireFox (add a min-width)

--- a/src/scss/blocks/form/_input-search.scss
+++ b/src/scss/blocks/form/_input-search.scss
@@ -20,4 +20,5 @@
     padding: 0;
     outline: none;
     width: 100%;
+    min-width: 0;
 }
